CocacolaProject/src/objects/RFA__c.object
<CustomObject>
    <fields>
        <fullName>Admin_Comment__c</fullName>
        <label>Admin Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agents_Name__c</fullName>
        <label>Agents Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApprovalLetterComments__c</fullName>
        <inlineHelpText>条件付きの承認条件を表すコメント。</inlineHelpText>
        <label>Follow-up: Approver Comments/Conditions</label>
        <picklist>
            <picklistValues>
                <fullName>The requesting party must ensure appropriate coordination with the above approver(s) to fully address any and all approval conditions.  Any failure to fully address these conditions will be subject to Audit review.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The requesting party must fully comply with the above approval conditions, although explicit communication or follow up with these approvers is not required.  Any failure to fully address these conditions will be subject to Audit review.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <label>Approver Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BCGBenefit_FinancialMatrix_Assumption_CS__c</fullName>
        <defaultValue>&quot;実施によりもたらされる定量的効果と定性的効果を記載します。&quot; +BR()+
&quot;　・利益/売上高/販売数量/シェアの拡大、コスト削減等の定量的な効果を記載&quot; +BR()+
&quot;　・リスク回避、法的規制への対応、業務品質の向上、コンプライアンス遵守等の定性的な効果を記載&quot;

+BR()+BR()+

&quot;Describe the strategic, business and qualitative benefits. Consider competitive advantage, volume/value share, per capital consumption, brand measures, social responsibility.&quot; +BR()+
&quot;Describe other benefits, including cost reduction, risk avoidance, and legal/regulatory/quality compliance.&quot; +BR()+
&quot;Provide an analysis of overall financial and economic impact (for example NPV/IRR, payback, and EP), including underlying assumptions.&quot;</defaultValue>
        <label>Benefits/Financial Metrics/Assumptions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BCG_Benefit_FinancialMetric_Assumption_G__c</fullName>
        <defaultValue>&quot;実施によりもたらされる定量的効果と定性的効果を記載します。&quot; +BR()+
&quot;　・利益/売上高/販売数量/シェアの拡大、コスト削減等の定量的な効果を記載&quot; +BR()+
&quot;　・リスク回避、法的規制への対応、業務品質の向上、コンプライアンス遵守等の定性的な効果を記載&quot;

+BR()+BR()+

&quot;Describe the strategic, business and qualitative benefits. Consider competitive advantage, volume/value share, per capital consumption, brand measures, social responsibility.&quot; +BR()+ 
&quot;Describe other benefits, including cost reduction, risk avoidance, and legal/regulatory/quality compliance.&quot;</defaultValue>
        <label>Benefits/Financial Metrics/Assumptions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BCG_Cost_Estimates_CPSP__c</fullName>
        <defaultValue>&quot;実施に伴う費用（CAPEX,OPEX、DME)の予定額を記載します。&quot; +BR()+
&quot;　・費用内訳を記載（設備投資額、人員増に伴う人件費、外部業者の委託費等）&quot; +BR()+
&quot;　・購入する機械設備や装置の概要について詳細記載（メーカー、モデル、仕様等）&quot; +BR()+
&quot;　・複数業者の相見積もりを前提とし、費用、機能、品質等の比較した結果を記載&quot;

+BR()+BR()+

&quot;Detail estimated costs and expenses, including OPEX, DME, and CAPEX.&quot; +BR()+
&quot;Include key drivers for costs (e.g. additional people expense, fixed asset investment and external/third-party costs).&quot; +BR()+
&quot;Provide a detailed list of the project, such as civil work, line equipment etc.&quot; +BR()+
&quot;Provide a description of the machinery and equipment to be purchased, e.g. type, model and any specification. If request is for production equipment, provide the production capacity and the associated incremental volume (if applicable).&quot; +BR()+
&quot;Include supplier/manufacturer cost quotes, if applicable.&quot; +BR()+
&quot;Justify the reasonableness of cost or price of goods or services using relevant benchmarks.&quot; +BR()+
&quot;Describe any cost sharing arrangements with external partners.&quot;</defaultValue>
        <label>Cost Estimates</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BCG_Cost_Estimates_G__c</fullName>
        <defaultValue>&quot;実施に伴う費用（CAPEX,OPEX、DME)の予定額を記載します。&quot; +BR()+
&quot;　・費用内訳を記載（設備投資額、人員増に伴う人件費、外部業者の委託費等）&quot; +BR()+
&quot;　・損益インパクトや必要な場合には貸借対照表（B/S)への影響を記載&quot;

+BR()+BR()+

&quot;Detail estimated costs and expenses, including OPEX, DME, and CAPEX.&quot; +BR()+
&quot;Include key drivers for costs (e.g. additional people expense, assets and external / third-party costs).&quot; +BR()+
&quot;Describe the income statement (gain or loss on sale) and/or balance sheet impact of the transaction, if applicable.&quot;</defaultValue>
        <label>Cost Estimates</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BCG_General_Comment_CPSM__c</fullName>
        <defaultValue>&quot;承認者が経営判断をするために十分な情報を記載する必要があります。&quot; + BR()+
&quot;ビジネスケースでは以下の内容について説明してください。&quot;

+ BR() + BR() +

&quot;The Business Case should be sufficient to gain management alignment and approval. The following information is mandatory for the Business Case.&quot;
+ BR() +
&quot;The following items should be included in the business case, if relevant.&quot;</defaultValue>
        <description>General Comment for Capital / Small</description>
        <label>General Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BCG_General_Comment__c</fullName>
        <defaultValue>&quot;ビジネスケースでは以下の内容について説明してください。&quot; +BR()+
&quot;・承認者が経営判断をするために十分な情報を記載する必要があります。&quot; +BR()+
&quot;・高額な投資案件やマーケティング・コンサルティング契約、M&amp;A契約などには、ビジネスケースは必ず記載してください。&quot; +BR()+
&quot;・製品廃棄等の在庫調整、資産の減損処理等の定期的に実施する申請では、ビジネスケースの詳細な記載は不要です。&quot; 

+BR()+BR()+

&quot;The following items should be included in the business case, if relevant.&quot; +BR()+
&quot;The Business Case should be sufficient to gain management alignment and approval. The following information is mandatory for the Business Case. Certain items below are generally applicable to significant capital commitments and agreements such as mergers &amp; acquisitions, marketing, supply and purchase commitments, consulting, etc., but may not be relevant for more routine requests such as inventory adjustments, asset impairments, etc. In this case, please make a note in the respective field.&quot;</defaultValue>
        <label>General Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BCG_Objectives_Rationale_Background__c</fullName>
        <defaultValue>&quot;RFA承認申請の概要やその背景について記載します。&quot; +BR()+ 
&quot;　・投資概要や契約条件等の具体的な内容を記載&quot; +BR()+
&quot;　・実行により期待される効果や現状の問題解決内容等、申請目的と根拠 を記載&quot; +BR()+
&quot;　・申請の背景を記載（過去の経緯：新規の案件または契約更新、契約先との取引有無等）&quot;

+BR()+BR()+

&quot;Provide an overview and scope of the request.&quot; +BR()+ 
&quot;Describe objectives and rationale, including problem or opportunity we are solving and the proposed solution / desired outcome.&quot; +BR()+
&quot;Describe background (include the history with this type of transaction, whether the transaction is a renewal, and experience with any relevant third parties.)&quot; +BR()+
&quot;Describe the specific business request to be approved including terms.&quot;</defaultValue>
        <label>Objectives/Rationale/Background</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BCG_Risks_and_Alternatives_G__c</fullName>
        <defaultValue>&quot;リスクとその軽減策や代替案を具体的に記載します。&quot; +BR()+
&quot;　・リスク：実行中止やスケジュール遅延、費用増等の可能性について記載&quot; +BR()+
&quot;　・軽減策：修正スケジュールや投資内容の見直し等の対応策を記載&quot; +BR()+
&quot;　・代替案：申請の内容が承認されなかった場合の考え得る最良の代替案について記載&quot;

+BR()+BR()+

&quot;Describe business risks, including risks of inaction or delay. Outline specific risks and mitigating factors including those related to technology, complexity, operational business or timeline.&quot; +BR()+
&quot;Explain alternative scenarios or solutions considered (financial and/or business) and the rationale for rejecting them in favor of recommended solution.&quot; +BR()+
&quot;Describe the optimal alternative action the operation would consider, including financial impact.&quot;</defaultValue>
        <label>Risks and Alternatives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Benefits_Financial_Metrics_Assumptions__c</fullName>
        <label>Input</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BoardSubItem__c</fullName>
        <inlineHelpText>取締役会の承認が必要な場合に入力して下さい。</inlineHelpText>
        <label>Board Item</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Board</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BottlerDiscPaybackPeriodYears__c</fullName>
        <inlineHelpText>損益分岐点を上回るまでにかかる年数（投資と収益の関係において）。</inlineHelpText>
        <label>Bottler Disc. Payback Period-Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BottlerIRR__c</fullName>
        <inlineHelpText>内部収益率</inlineHelpText>
        <label>Bottler IRR (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BottlerInvestmentDepreciationYears__c</fullName>
        <label>Bottler Investment Depreciation Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BottlerLocalEffectiveTaxRate__c</fullName>
        <inlineHelpText>Effective tax rate of the bottler involved in the transaction.</inlineHelpText>
        <label>Bottler Local Effective Tax Rate (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BottlerParticipationAmountFC__c</fullName>
        <inlineHelpText>The bottler&apos;s portion of the cost, as opposed to the Company.</inlineHelpText>
        <label>Bottler Participation Amount (JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BottlerParticipationAmountUSD__c</fullName>
        <formula>BottlerParticipationAmountFC__c 
/*
BottlerParticipationAmountFC__c * ARERate__c
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The bottler&apos;s portion of the cost, as opposed to the Company.</inlineHelpText>
        <label>Bottler Participation Amount (USD $)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BottlerParticipation__c</fullName>
        <inlineHelpText>The bottler&apos;s percentage portion of the cost, as opposed to the Company.</inlineHelpText>
        <label>Bottler Participation (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BottlerWACC__c</fullName>
        <inlineHelpText>Weighted average cost of capital for the bottler use for comparative purposes.</inlineHelpText>
        <label>Bottler WACC (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BudgetType__c</fullName>
        <inlineHelpText>【執行伺い】は、投資の詳細内容が概ね確定していて実際の実行前に申請する場合に選択します。 【方針伺い】は、詳細内容が決定しておらず執行伺いを申請することはできないが、多額の支出を予定する案件のため、事前に情報を共有し予算確保を目的とする場合に選択します。</inlineHelpText>
        <label>Budget Type</label>
        <picklist>
            <picklistValues>
                <fullName>Formal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget_Approval_Number__c</fullName>
        <inlineHelpText>予算承認番号はサイドバーのCAPEXプラン予算承認リストを参照して入力してください</inlineHelpText>
        <label>Budget Approval Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Case_Financials_Guideline__c</fullName>
        <defaultValue>&quot;財務分析を確認のうえ以下の数字を入力してください&quot;

+BR()+

&quot;Look at financial analysis and fill out the number below.&quot;</defaultValue>
        <label>Business Case Financials Guideline</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCEJ_Attendees_Name_Title_or_Function__c</fullName>
        <description>Entertainment</description>
        <label>CCEJ Attendees Name/Title or Function</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CCEmailAddressCM__c</fullName>
        <label>CCEmailAddressCM</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CC__c</fullName>
        <label>CC</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CapitalExpenditureTotalFC__c</fullName>
        <label>Capital Expenditure Total (JPY)</label>
        <summarizedField>Capital_Expenditure__c.Amount__c</summarizedField>
        <summaryForeignKey>Capital_Expenditure__c.RFA__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CapitalManagementAdministered__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A field to be selected by Capital Management for time sensitive RFAs which must be expedited through the approval process.  Therefore, these RFAs will not be included in RFA system metrics reporting.</inlineHelpText>
        <label>Capital Management Administered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CapitalizedInterestUSD__c</fullName>
        <inlineHelpText>Charged on projects which are greater than U.S. $500,000 and involve a preparation period of more than 3 months (see Standard Practices and Procedures manual, Bulletin 8.1).</inlineHelpText>
        <label>Capitalized Interest (JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CashflowAnalysisYears__c</fullName>
        <inlineHelpText>何年間の収支分析かを示します。</inlineHelpText>
        <label>Cashflow Analysis Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CashflowYears__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Cashflow Years</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CirculationDate__c</fullName>
        <inlineHelpText>承認申請がドラフトから回覧中に更新された日時。</inlineHelpText>
        <label>Circulation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Close_Reason__c</fullName>
        <description>Close Reason by Requester, only available on Draft or Return To Sender</description>
        <label>Close Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommentsConditions__c</fullName>
        <inlineHelpText>承認者が承認条件を記述します。</inlineHelpText>
        <label>Comments/Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>資本管理者がこの申請に関してコメントする欄です。作成者や承認者は閲覧することができません。</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommentsaboutExpectedCommitmentDate__c</fullName>
        <inlineHelpText>契約予定日について説明します。例えば、罰則なしで契約できる最後の日あるいは、契約締結が求められる日など。</inlineHelpText>
        <label>Comments about Expected Commitment Date</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CompanyDiscountPaybackPeriodYears__c</fullName>
        <inlineHelpText>The number of years it takes to break-even between the investment and the return using a the Company&apos;s WACC rate.</inlineHelpText>
        <label>Company Discount Payback Period (Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompanyIRR__c</fullName>
        <inlineHelpText>投資の収益率を分析する時に計算される内部収益率。</inlineHelpText>
        <label>Company IRR (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CompanyInvestmentAmortizationYears__c</fullName>
        <label>Company Investment Amortization Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompanyLocalEffectiveTaxRate__c</fullName>
        <inlineHelpText>財務分析に使用されます。資本管理によって提供される実効税率です。</inlineHelpText>
        <label>Company Local Effective Tax Rate (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CompanyParticipationAmountFC__c</fullName>
        <inlineHelpText>The Company&apos;s portion of the cost, as opposed to the bottler.</inlineHelpText>
        <label>Company Participation Amount (JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompanyParticipationAmountUSD__c</fullName>
        <formula>CompanyParticipationAmountFC__c 
/*
CompanyParticipationAmountFC__c * ARERate__c
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Company&apos;s portion of the cost, as opposed to the bottler.</inlineHelpText>
        <label>Company Participation Amount (USD $)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompanyParticipation__c</fullName>
        <inlineHelpText>The Company&apos;s percentage portion of the cost, as opposed to the bottler.</inlineHelpText>
        <label>Company Participation (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CompanyWACC__c</fullName>
        <inlineHelpText>Weighted average cost of capital provided by Treasury to be used in the financial analysis.</inlineHelpText>
        <label>Company WACC (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Entertainment</description>
        <label>Company Neme</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompletionDate__c</fullName>
        <inlineHelpText>申請が承認、否認、クローズされた日時。</inlineHelpText>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CostCenterName__c</fullName>
        <formula>Cost_Center_Number__r.Function__c &amp; &quot; / &quot; &amp; Cost_Center_Number__r.Cost_Center_Name__c  
+BR()+
Cost_Center_Number__r.Function_En__c &amp; &quot; / &quot; &amp; Cost_Center_Number__r.Cost_Center_Name_En__c</formula>
        <label>Cost Center Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Function_Name_EN__c</fullName>
        <formula>Cost_Center_Number__r.Function_En__c &amp;&quot; / &quot;&amp; Cost_Center_Number__r.Cost_Center_Name_En__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Center Function/Name EN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Function_Name_JP__c</fullName>
        <formula>Cost_Center_Number__r.Function__c &amp;&quot; / &quot;&amp; Cost_Center_Number__r.Cost_Center_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Center Function/Name JP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Function__c</fullName>
        <formula>Cost_Center_Number__r.Function_En__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Center Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Number_Name__c</fullName>
        <formula>Cost_Center_Number__r.Name &amp;&quot;　 &quot;&amp; 
Cost_Center_Number__r.Function__c &amp;&quot; / &quot;&amp; Cost_Center_Number__r.Cost_Center_Name__c &amp;&quot;　 &quot;&amp;
 Cost_Center_Number__r.Function_En__c &amp;&quot; / &quot;&amp; Cost_Center_Number__r.Cost_Center_Name_En__c</formula>
        <label>Cost Center Number/Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cost Center No.</label>
        <referenceTo>Cost_Center__c</referenceTo>
        <relationshipLabel>RFA</relationshipLabel>
        <relationshipName>RFA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Standard_Name__c</fullName>
        <formula>Cost_Center_Number__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Center Standard Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Estimates__c</fullName>
        <label>Input</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CreatedDate_by_Hour__c</fullName>
        <formula>CASE( VALUE(MID( TEXT(CreatedDate), 12, 2 ) ) ,
0, 9,
1, 10,
2, 11,
3, 12,
4, 13,
5, 14,
6, 15,
7, 16,
8, 17,
9, 18,
10,19,
11,20,
12,21,
13,22,
14,23,
15, 0,
16, 1,
17, 2,
18, 3,
19, 4,
20, 5,
21, 6,
22, 7,
23, 8,
24, 0,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate by Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DataClassificationNew__c</fullName>
        <formula>&quot;社外秘/Confidential&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataClassification__c</fullName>
        <inlineHelpText>Select the appropriate Data Classification for this request. Note: Highly Restricted information cannot be entered into the sytem. If your request is Highly Restricted  or contains Highly Restricted information please contact your Location Coordinator.</inlineHelpText>
        <label>Data Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Use</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Travel Expense</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaysinKeyOperations__c</fullName>
        <formula>REP_DaysInPreKeyOps__c + REP_DaysInKeyOps__c +  REP_DaysInPostKeyOps__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Key Operations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <description>Travel Expense</description>
        <label>Destination</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountedPaybackPeriodYears__c</fullName>
        <label>Discounted Payback Period (Years)</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EconomicProfitUSD__c</fullName>
        <inlineHelpText>Income from continuing operations, after giving effect to taxes and excluding the effects of interest (commonly referred to as NOPAT), in excess of a computed capital charge for average operating capital employed.</inlineHelpText>
        <label>Economic Profit (JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Travel Expense</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entertainment_Type_1__c</fullName>
        <description>Entertainment</description>
        <label>Entertainment Type 1</label>
        <picklist>
            <picklistValues>
                <fullName>Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Entertainment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entertainment_Type_2__c</fullName>
        <label>Entertainment Type 2</label>
        <picklist>
            <picklistValues>
                <fullName>Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Entertainment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entertainment_Type_3__c</fullName>
        <description>Entertainment</description>
        <label>Entertainment Type 3</label>
        <picklist>
            <picklistValues>
                <fullName>Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Entertainment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EquipmentPlacementPeriodYears__c</fullName>
        <inlineHelpText>The number of year equipment placement will occur.</inlineHelpText>
        <label>Equipment Placement Period (Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EstimatedCosts_PerPerson__c</fullName>
        <formula>/*
Total_Estimated_Costs__c / Total_Number_of_Attendees__c
*/

IF(Total_Number_of_Attendees__c == 0, 0, Total_Estimated_Costs__c / Total_Number_of_Attendees__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Costs per Person</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost_Accommodation__c</fullName>
        <description>Travel Expense</description>
        <label>Estimated Cost - Accommodation (JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost_Per_Diem__c</fullName>
        <description>Travel Expense</description>
        <inlineHelpText>In the case of CCEJ Emploee</inlineHelpText>
        <label>Estimated Cost - Per Diem (JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost_Transportation__c</fullName>
        <description>Travel Expense</description>
        <label>Estimated Cost - Transportation (JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Payment_1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Entertainment</description>
        <label>Estimated Costs (JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Payment_2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Entertainment</description>
        <label>Estimated Costs (JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Payment_3__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Entertainment</description>
        <label>Estimated Costs (JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpectedCommitmentDate__c</fullName>
        <inlineHelpText>CCEJのCOAにより定義された契約予定日です。例えば、2月1日に契約同意され有効期限が3か月後であった場合には、契約予定日は2月1日となります。</inlineHelpText>
        <label>Expected Commitment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Capitalization_Date__c</fullName>
        <label>Expected Capitalization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Cash_Spend_Date__c</fullName>
        <label>Expected Cash Spend Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Explanation_Justification__c</fullName>
        <label>Explanation / Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FC_TaxRate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FC_TaxRate</label>
        <referenceTo>Financial_Constant__c</referenceTo>
        <relationshipLabel>RFA</relationshipLabel>
        <relationshipName>RFA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FC_WACC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FC_WACC</label>
        <referenceTo>Financial_Constant__c</referenceTo>
        <relationshipLabel>RFA (FC_WACC)</relationshipLabel>
        <relationshipName>RFA1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <formula>&apos;test&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Travel Expense</description>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>General_Comment_Link__c</fullName>
        <formula>HYPERLINK(&apos;https://c.ap0.content.force.com/servlet/servlet.FileDownload?file=01510000001evbL&apos;, &apos;Business Case Guideline&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>General Comment Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Comment_test__c</fullName>
        <label>General Comment test</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Guest_Attendees_Name_Title_or_Function__c</fullName>
        <description>Entertainment</description>
        <label>Guest Attendees Name/Title or Function</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Home_Address__c</fullName>
        <description>Travel Expense</description>
        <label>Home Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_PhoneNumber__c</fullName>
        <label>Home Phone #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IRR__c</fullName>
        <inlineHelpText>期待される成長率。</inlineHelpText>
        <label>IRR (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IncludeInCapitalReports__c</fullName>
        <inlineHelpText>投資管理者が年間投資報告のために使用します。</inlineHelpText>
        <label>Include In Capital Reports</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InitialBudgetYear__c</fullName>
        <inlineHelpText>投資が実行されると想定される年</inlineHelpText>
        <label>Initial Budget Year</label>
        <picklist>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>